--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-.ul-link li{
+.ul-link li {
     display: inline;
 
 }
 
-.ul-link a{
+.ul-link a {
     text-decoration: none;
     display: block;
     float: right;
@@ -17,22 +17,22 @@
 
 }
 
-.ul-link img{
+.ul-link img {
     width: 400px;
 }
 
 
-.nav-link{
+.nav-link {
     background-color: #333;
 }
 
 
-p{
+.item {
     text-align: center;
-     font-size: 40px;
-     color: black;
-     font-weight: bold;
-     margin-top: 30px;
+    font-size: 40px;
+    color: black;
+    font-weight: bold;
+    margin-top: 30px;
 
 }
 
@@ -40,7 +40,7 @@ p{
 
 
 .container {
-    height: 100vh;
+    height: 90vh;
     width: 100%;
     background-image: url(./plane_animation_img/images/background.jpg);
     background-size: cover;
@@ -48,16 +48,19 @@ p{
     position: relative;
     overflow: hidden;
 
+
 }
 
 .runway {
 
-height: 200px;
-width: 100%;
-background-image: url(./plane_animation_img/images/road.jpg);
-position: absolute;
-left: 0;
-bottom: 0;
+    height: 200px;
+    width: 100%;
+    background-image: url(./plane_animation_img/images/road.jpg);
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+
 
 
 }
@@ -71,19 +74,131 @@ bottom: 0;
     transform-origin: 100% 50%;
 }
 
-@keyframes plan{
+@keyframes plan {
 
-0%{
-    transform: translateX(0px) translateY(0px) rotate(0deg) ;
+    0% {
+        transform: translateX(0px) translateY(0px) rotate(0deg);
+    }
+
+    30% {
+        transform: translateX(-500px) translateY(0px) rotate(0deg);
+    }
+
+    100% {
+        transform: translateX(-1500px) translateY(-200px) rotate(20deg);
+    }
+
+
 }
 
-30%{
-    transform: translateX(-500px) translateY(0px) rotate(0deg) ;
+
+/*proje-css*/
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+
+
+
 }
 
-100%{
-    transform: translateX(-1500px) translateY(-200px) rotate(20deg)  ;
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 2s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    background-color: #bbb;
+    color: black;
+}
+
+.flip-card-back {
+    background-color: bisque;
+    color: white;
+    transform: rotateY(180deg);
+    line-height: 3em;
+    
+    
+    
+    
+}
+
+p {
+    color: black;
+    font-weight: bold;
+    
+    
+}
+
+.info{
+    text-decoration: underline;
+}
+
+.image {
+    width: 300px;
+    height: 300px;
+    border: solid 1px white;
+    -webkit-box-shadow: 0px 1px 12px 0px rgba(0, 0, 0, 0.91);
+    box-shadow: 0px 1px 12px 0px rgba(0, 0, 0, 0.91);
+
+
+
+
+}
+
+.flex {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 12.5em;
+
+
 }
 
 
+
+.text {
+    padding-left: 3em;
+    display: inline-block;
+    font-size: 20px;
+    padding-top: 0.2em;
+}
+
+.icons {
+    display: inline-block;
+    float: right;
+    margin-right: 5em;
+    letter-spacing: 1em;
+    font-size: 30px;
+
+
+
+}
+
+footer {
+    padding: 2em;
+}
+
+footer a{
+    color: black;
 }
